// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapping a simple script 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "a b.ts:1",
              "name": "f",
              "static": true,
              "type": "function",
            },
          ],
          "name": "a b",
          "type": "class",
        },
        {
          "children": [
            {
              "location": "index.ts:4",
              "name": "succ",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "appmap-node",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "a b",
      "event": "call",
      "id": 1,
      "lineno": 1,
      "method_id": "f",
      "parameters": [],
      "path": "a b.ts",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "Number",
        "value": "1",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 3,
      "lineno": 4,
      "method_id": "succ",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "42",
        },
      ],
      "path": "index.ts",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 3,
      "return_value": {
        "class": "Number",
        "value": "43",
      },
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "appmap-node",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping an mts script 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "index.mts:1",
              "name": "helloWorld",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "appmap-node",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "index",
      "event": "call",
      "id": 1,
      "lineno": 1,
      "method_id": "helloWorld",
      "parameters": [],
      "path": "index.mts",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "String",
        "value": "'Hello World from mts'",
      },
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "appmap-node",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;
